啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊
啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊

--- a/project/index.html
+++ b/project/index.html
@@ -11,6 +11,7 @@
     
 </head>
 <body class="noscroll" scroll="no" style="overflow: hidden">
+  
 <div class="all">
   <button class="button hidden" id="modal-open">Enter Birthday?</button>
 
@@ -103,91 +104,91 @@
   <main id="main" class="hidden fadein ">
     <div class="musician-banner">
         <ul class="musician">
-          <li id="bach" class=" m1 musicbtn">
+          <li  class=" m1 ">
             <div class="card">
               <img src="material/image/square/bach.jpg" alt="1" class="frontface">
-              <input type="button"  value="Bach" class="backface">
+              <input type="button" id="bach" value="Bach" class="backface musicbtn">
             </div>
           </li>
 
-          <li id="beethoven" class=" m2 musicbtn">
+          <li class=" m2 ">
             <div class="card">
               <img src="material/image/square/beethoven.jpg" alt="2" class="frontface">
-              <input type="button"  value="Beethoven" class="backface">
+              <input type="button" id="beethoven" value="Beethoven" class="backface musicbtn">
              </div>
           </li>
 
-          <li id="chopin" class=" m3 musicbtn">
+          <li class=" m3 ">
             <div class="card">
               <img src="material/image/square/chopin.jpg" alt="3" class="frontface">
-              <input type="button"  value="Chopin"  class="backface">
+              <input type="button" id="chopin" value="Chopin"  class="backface musicbtn">
             </div>
           </li>
 
-          <li id="debussy" class=" m4 musicbtn">
+          <li  class=" m4 ">
             <div class="card">
               <img src="material/image/square/debussy.jpg" alt="4" class="frontface">
-              <input type="button"  value="Debussy"  class="backface">
+              <input type="button" id="debussy" value="Debussy"  class="backface musicbtn">
             </div>
           </li>
 
 <!-- -------------------------------------------- -->
 
-          <li id="liszt01" class=" m5 musicbtn">
+          <li class=" m5">
             <div class="card">
               <img src="material/image/square/liszt.jpeg" alt="5" class="frontface">
-              <input type="button"  value="Liszt"  class="backface">
+              <input type="button" id="liszt01"  value="Liszt"  class="backface musicbtn">
            </div>
           </li>
 
-          <li id="mendlsson" class=" m6 musicbtn">
+          <li class=" m6">
             <div class="card">
               <img src="material/image/square/mendelson.jpeg" alt="6" class="frontface">
-              <input type="button"  value="Mendelson"  class="backface">
+              <input type="button" id="mendelssohn"  value="Mendelsson"  class="backface musicbtn">
             </div>
           </li>
 
-          <li id="mozart01" class=" m7 musicbtn">
+          <li class=" m7">
             <div class="card">
               <img src="material/image/square/mozart.jpg" alt="7" class="frontface">
-              <input type="button"  value="Mozart"   class="backface">
+              <input type="button" id="mozart01"  value="Mozart"   class="backface musicbtn">
             </div>
           </li>
 
-          <li id="satie" class=" m8 musicbtn">
+          <li class=" m8">
             <div class="card">
               <img src="material/image/square/satie.jpg" alt="8" class="frontface">
-              <input type="button"  value="Satie"   class="backface">
+              <input type="button" id="satie"  value="Satie"   class="backface musicbtn">
            </div>
           </li>
 
 <!-- --------------------------------------------------- -->
 
-          <li id="schubert" class=" m9 musicbtn">
+          <li class=" m9">
             <div class="card">
               <img src="material/image/square/schubert.jpg" alt="9" class="frontface">
-              <input type="button"  value="Schubert" class="backface">
+              <input type="button" id="schubert"  value="Schubert" class="backface musicbtn">
            </div>
           </li>
 
-          <li id="schumann" class=" m10 musicbtn">
+          <li class=" m10">
             <div class="card">
               <img src="material/image/square/schumann.jpg" alt="10" class="frontface">
-              <input type="button"  value="Schumann" class="backface">
+              <input type="button"  id="schumann"  value="Schumann" class="backface musicbtn">
            </div>
           </li>
 
-          <li id="liszt02" class=" m11 musicbtn">
+          <li class=" m11">
             <div class="card">
               <img src="material/image/square/liszt2.jpg" alt="11" class="frontface">
-              <input type="button"  value="Liszt" class="backface">
+              <input type="button" id="liszt02"  value="Liszt" class="backface musicbtn">
             </div>
           </li>
 
-          <li id="mozart02" class=" m12 musicbtn">
+          <li class=" m12">
             <div class="card">
               <img src="material/image/square/mozart2.jpg" alt="12" class="frontface">
-              <input type="button"  value="Mozart" class="backface">
+              <input type="button" id="mozart02"  value="Mozart" class="backface musicbtn">
             </div>
           </li>
 
@@ -198,17 +199,6 @@
 
 
         </div>
-
-
-
-
-
-
-
-
-
-
-
 
     </div> <!-- musician -->
   </main>
