--- a/project/index.html
+++ b/project/index.html
@@ -136,15 +136,15 @@
 
           <li class=" m5">
             <div class="card">
-              <img src="material/image/square/liszt.jpeg" alt="5" class="frontface">
-              <input type="button" id="liszt01"  value="Liszt"  class="backface musicbtn">
-           </div>
+              <img src="material/image/square/satie.jpg" alt="5" class="frontface">
+              <input type="button" id="satie"  value="Satie"   class="backface musicbtn">
+          </div>
           </li>
 
           <li class=" m6">
             <div class="card">
               <img src="material/image/square/mendelson.jpeg" alt="6" class="frontface">
-              <input type="button" id="mendelssohn"  value="Mendelsson"  class="backface musicbtn">
+              <input type="button" id="mendelssohn"  value="Mendelsson"  class="backface musicbtn middle">
             </div>
           </li>
 
@@ -157,11 +157,10 @@
 
           <li class=" m8">
             <div class="card">
-              <img src="material/image/square/satie.jpg" alt="8" class="frontface">
-              <input type="button" id="satie"  value="Satie"   class="backface musicbtn">
+              <img src="material/image/square/liszt.jpeg" alt="8" class="frontface">
+              <input type="button" id="liszt"  value="Liszt"  class="backface musicbtn">
            </div>
           </li>
-
 <!-- --------------------------------------------------- -->
 
           <li class=" m9">
@@ -180,15 +179,15 @@
 
           <li class=" m11">
             <div class="card">
-              <img src="material/image/square/liszt2.jpg" alt="11" class="frontface">
-              <input type="button" id="liszt02"  value="Liszt" class="backface musicbtn">
+              <img src="material/image/square/rachmaninoff.jpg" alt="11" class="frontface">
+              <input type="button" id="rachmaninoff"  value="Rachmaninoff" class="backface musicbtn small">
             </div>
           </li>
 
           <li class=" m12">
             <div class="card">
-              <img src="material/image/square/mozart2.jpg" alt="12" class="frontface">
-              <input type="button" id="mozart02"  value="Mozart" class="backface musicbtn">
+              <img src="material/image/square/brahms.jpg" alt="12" class="frontface">
+              <input type="button" id="brahms"  value="Brahms" class="backface musicbtn ">
             </div>
           </li>
 
